html structure and scss config done

--- a/index.html
+++ b/index.html
@@ -4,10 +4,63 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair:wght@900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/index.css">
-    <title>Document</title>
+    <title>Interface complex.06</title>
 </head>
 <body>
-    
+    <h1>Jobs</h1>
+
+    <hr>
+
+    <div class="list">
+        <ul>
+            <li>
+                <div class="list-items">
+                    <p class="job-category">All</p>
+                    <p class="number">(3)</p>
+                </div>
+            </li>
+            <li>
+                <div class="list-items">
+                    <p class="job-category">Engineering</p>
+                    <p class="number">(2)</p>
+                </div>
+            </li>
+            <li>
+                <div class="list-items">
+                    <p class="job-category">Design</p>
+                    <p class="number">(1)</p>
+                </div>
+            </li>
+            <li>
+                <div class="list-items">
+                    <p class="job-category">Sales/Marketing/Operations</p>
+                    <p class="number">(0)</p>
+                </div>
+            </li>
+            <li>
+                <div class="list-items">
+                    <p class="job-category">Management</p>
+                    <p class="number">(0)</p>
+                </div>
+            </li>
+        </ul>
+    </div>
+
+    <div class="job-title">
+        <ul>
+            <li>
+                <p>UI/UX Designer</p>
+                <p>Sr. Front End Developer</p>
+                <p>Systems Engineer</p>
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
