amelioration of the design

--- a/index.html
+++ b/index.html
@@ -14,53 +14,62 @@
     <title>Interface complex.06</title>
 </head>
 <body>
-    <h1>Jobs</h1>
 
-    <hr>
+    <div class="interface-area">
 
-    <div class="list">
-        <ul>
-            <li>
-                <div class="list-items">
-                    <p class="job-category">All</p>
-                    <p class="number">(3)</p>
-                </div>
-            </li>
-            <li>
-                <div class="list-items">
-                    <p class="job-category">Engineering</p>
-                    <p class="number">(2)</p>
-                </div>
-            </li>
-            <li>
-                <div class="list-items">
-                    <p class="job-category">Design</p>
-                    <p class="number">(1)</p>
-                </div>
-            </li>
-            <li>
-                <div class="list-items">
-                    <p class="job-category">Sales/Marketing/Operations</p>
-                    <p class="number">(0)</p>
-                </div>
-            </li>
-            <li>
-                <div class="list-items">
-                    <p class="job-category">Management</p>
-                    <p class="number">(0)</p>
-                </div>
-            </li>
-        </ul>
-    </div>
+        <h1>Jobs</h1>
 
-    <div class="job-title">
-        <ul>
-            <li>
-                <p>UI/UX Designer</p>
-                <p>Sr. Front End Developer</p>
-                <p>Systems Engineer</p>
-            </li>
-        </ul>
+        <hr>
+
+        <div class="text-area">
+
+            <div class="list">
+                <ul>
+                    <li>
+                        <div class="list-items">
+                            <p class="job-category">All</p>
+                            <p class="number">(3)</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="list-items">
+                            <p class="job-category">Engineering</p>
+                            <p class="number">(2)</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="list-items">
+                            <p class="job-category">Design</p>
+                            <p class="number">(1)</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="list-items">
+                            <p class="job-category">Sales/Marketing/Operations</p>
+                            <p class="number">(0)</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="list-items">
+                            <p class="job-category">Management</p>
+                            <p class="number">(0)</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="job-title">
+                <ul>
+                    <li>
+                        <p>UI/UX Designer</p>
+                        <p>Sr. Front End Developer</p>
+                        <p>Systems Engineer</p>
+                    </li>
+                </ul>
+            </div>
+        
+        </div>
+
     </div>
 </body>
 </html>
